Updated How to release openHAB (markdown)